# replication-child-benefit

./: CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: refs.bib  replication_child_benefit.tex  replication_child_benefit_pres.tex  task_paper.py
src/replication_child_benefit/: __init__.py
src/replication_child_benefit/analysis/: model.py  task_analysis.py
src/replication_child_benefit/data/: data_original.dta
src/replication_child_benefit/data_management/: __init__.py  clean_data.py  data_info.yaml  group_data.py  model_info.py  plot_data.py  task_data_management.py  task_group_data.py  task_model_info.py  task_plot_data.py
src/replication_child_benefit/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: data_fixture.csv  data_fixture.dta  data_fixture_grouped.csv  data_info_fixture.yaml  test_clean_data.py
