[metadata]
name = replication_child_benefit
description = Replication Child Benefit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JanaTeepunkt/replication_child_benefit
author = Jana Tissen
author_email = jana.tissen@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/JanaTeepunkt/replication_child_benefit
    Documentation = https://github.com/JanaTeepunkt/replication_child_benefit
    Github = https://github.com/JanaTeepunkt/replication_child_benefit
    Tracker = https://github.com/JanaTeepunkt/replication_child_benefit/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/replication_child_benefit/_version.py
